--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-Django==3.0.3
-django-heroku==0.3.1
-requests==2.23.0
-python-dateutil==2.8.1
-django-cors-headers==3.2.1 
-urllib3==1.24.2 
+asgiref==3.3.1
+Django==3.1.5
+pytz==2020.5
+sqlparse==0.4.1
